Added Training and TrainingType entities and Dao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 user.csvFile=C:/Teme EPAM/Spring_task1/csv/user.csv
 trainee.csvFile=C:/Teme EPAM/Spring_task1/csv/trainee.csv
 trainer.csvFile=C:/Teme EPAM/Spring_task1/csv/trainer.csv
+training.csvFile=C:/Teme EPAM/Spring_task1/csv/training.csv
+```
