--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.21.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>6.3.1.Final</version>
+			<type>pom</type>
+		</dependency>
     </dependencies>
 
 	<build>
